--- a/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
+++ b/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
@@ -1,6 +1,51 @@
+.main-div{
+    display: flex;
+    justify-content: center;
+}
+
+.main-spots{
+    display:flex;
+    flex-wrap:wrap;
+    width:100%;
+    /* width:50%; */
+    justify-content: center;
+    /* align-items: center; */
+    max-width: 1000px;
+    padding-top: 50px;
+    /* border:5px solid red; */
+
+}
+
 .spot-tiles{
     display:flex;
     flex-wrap:wrap;
     justify-content: space-evenly;
-    gap:10px
+    gap:25px;
+    /* flex-basis:66.7%; */
+    /* border:5px solid red; */
+}
+
+.spot-link{
+    display: flex;
+    box-shadow: 0 0 3px 1px;
+    border-radius: 10px;
+    min-width: 200px;
+   
+    max-width: 200px;
+   
+    justify-content: center;
+
+    padding:10px;
+
+
+}
+img{
+    padding-top: 10px;
+    max-width: 100%;
+    max-height: 75%;
+}
+
+.spot-tile-desc-top{
+    display: flex;
+    justify-content: space-between;
 }
