--- a/authenticate-me/frontend/src/index.css
+++ b/authenticate-me/frontend/src/index.css
@@ -2,4 +2,12 @@
 body{
     display: flex;
     justify-content: center;
+    background-color: aliceblue;
+}
+
+
+
+*{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color:rgb(19, 36, 46)
 }
