--- a/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
+++ b/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
@@ -26,7 +26,7 @@
 }
 
 .spot-link{
-    display: flex;
+    /* display: flex; */
     box-shadow: 0 0 3px 1px;
     border-radius: 10px;
     min-width: 200px;
