--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -1,7 +1,3 @@
-*{
-  
-}
-
 .create-link{
     color: teal;
     padding:0 10px
@@ -27,7 +23,8 @@
     align-items: center;
     padding-top: 20px;
     /* padding-bottom: 20px; */
-    border-bottom: 2px solid lightgrey
+    border-bottom: 2px solid lightgrey;
+    width:1000px;
 }
 
 .profile-menu{
