--- a/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
+++ b/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
@@ -45,7 +45,8 @@ img{
   
 }
 .preview-img{
-    padding-top: 10px;
+    border-radius: 5px;
+    /* padding-top: 10px; */
     max-width: 100%;
     max-height: 75%;
     width: fit-content;
