delete form modal is showing, but not working

--- a/authenticate-me/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/authenticate-me/frontend/src/components/ManageSpots/ManageSpots.css
@@ -41,7 +41,7 @@
 
 .manage-spot-img{
     padding-top: 10px;
-    max-width: 100%;
+    max-width: 200px;
     max-height: 75%;
     width:fit-content;
     height: 200px;
