have spot images displaying in spot details correctly, need to format in css still

--- a/authenticate-me/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/authenticate-me/frontend/src/components/ManageSpots/ManageSpots.css
@@ -40,11 +40,11 @@
 }
 
 .manage-spot-img{
-    padding-top: 10px;
-    max-width: 200px;
+
+    max-width: 220px;
     max-height: 75%;
-    width:fit-content;
-    height: 200px;
+    width:220px;
+    height: 220px;
     object-fit: cover;
     border-radius: 5px;
 }
