--- a/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
+++ b/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
@@ -39,18 +39,16 @@
 }
 
 img{
-    padding-top: 10px;
+
     max-width: 100%;
     max-height: 75%;
   
 }
 .preview-img{
     border-radius: 5px;
-    /* padding-top: 10px; */
-    max-width: 100%;
-    max-height: 75%;
-    width: fit-content;
-    height: 200px;
+
+    width: 220px;
+    height: 220px;
     object-fit: cover;
 }
 
