--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -48,31 +48,33 @@ h2{
     box-shadow: 5px 3px ;
 }
 .images-box{
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    /* grid-template-rows: 50% 50%; */
+    grid-template-columns: 50% 50%;
+    height: 100%;
 
 }
 
 .images-div{
-    max-width: 50%;
-    max-height: 500px;
+    max-width: 200%;
+    /* max-height: 500px; */
 }
 
-.spot-preview-img{
-    height:max-content;
-    width:max-content;
-    /* object-position: 0 -200px; */
+.spot-preview-img, .spot-grid-img{
+    width:100%;
+    height:100%;
+    object-fit:fill;
     object-fit: cover;
 }
 .non-preview-spot-images{
     display: grid;
     grid-template-rows: 50% 50%;
     grid-template-columns: 50% 50%;
-    width: 480px;
-    object-fit: cover;
-    overflow: hidden;
+    height: fit-content;
+    /* object-fit: fill; */
+    /* overflow: hidden; */
+    /* max-height: 100%; */
+    /* gap:10px; */
 }
 
-.spot-grid-img{
-    width: 220px;
-}
+
