fixed css with spot details

--- a/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
+++ b/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
@@ -38,12 +38,12 @@
     padding:10px;
 }
 
-img{
+/* img{
 
     max-width: 100%;
     max-height: 75%;
   
-}
+} */
 .preview-img{
     border-radius: 5px;
 
