--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -2,13 +2,8 @@
     width:1000px;
 }
 
-h1,h3{
+h1,h3,h2{
     display: flex;
-    justify-content: left;
-}
-
-h2{
-    display:flex;
     justify-content: left;
 }
 
@@ -48,33 +43,43 @@ h2{
     box-shadow: 5px 3px ;
 }
 .images-box{
-    display: grid;
+    display: flex;
+
     /* grid-template-rows: 50% 50%; */
-    grid-template-columns: 50% 50%;
-    height: 100%;
+    /* grid-template-columns: 50% 50%; */
+    /* height: 100%; */
 
 }
 
 .images-div{
-    max-width: 200%;
+    display: flex;
+    width: 100%;
     /* max-height: 500px; */
 }
 
-.spot-preview-img, .spot-grid-img{
-    width:100%;
-    height:100%;
-    object-fit:fill;
+.spot-preview-img{
+    width:50%;
+    height:auto;
+    /* object-fit:fill; */
     object-fit: cover;
 }
 .non-preview-spot-images{
-    display: grid;
-    grid-template-rows: 50% 50%;
-    grid-template-columns: 50% 50%;
-    height: fit-content;
-    /* object-fit: fill; */
-    /* overflow: hidden; */
-    /* max-height: 100%; */
-    /* gap:10px; */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height:fit-content;
+    /* grid-template-rows: 50% 50%;
+    grid-template-columns: 50% 50%; */
+     /* fit-content; */
+}
+.first,.second{
+    display: flex;
+    margin: 0;
+    width: 50%;
 }
 
+.spot-grid-img{
+    width: 100%;
+
+}
 
