--- a/authenticate-me/frontend/src/components/CreateSpot/CreateSpot.css
+++ b/authenticate-me/frontend/src/components/CreateSpot/CreateSpot.css
@@ -6,33 +6,32 @@
 .city-state-form-div{
     display: flex;
     width:500px;
-    /* justify-content:space-evenly; */
-
 }
+
 .form-div{
     display: flex;
     justify-content: center;
 }
+
 form{  
     max-width: 500px;
     padding:0;
-
 }
 
 input{
     width:100%
 }
+
 textarea{
-    min-width: 500px;
+    width: 100%;
 }
+
 .Navigation{
     width:1000px;
 }
 .comma{
     display: flex;
     flex-direction: column-reverse;
-    /* align-items:end; */
-    /* width:50px; */
     padding:0 0px 0 10px
 }
 
