--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -17,8 +17,8 @@ h1,h3,h2{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
-    
 }
+
 .price-reviews-box{
     display:flex;
     flex-direction: column;
@@ -31,6 +31,7 @@ h1,h3,h2{
     padding: 20px 20px;
     margin:10px 0px
 }
+
 .price-reviews{
     display:flex;
     justify-content: space-between;
@@ -42,44 +43,53 @@ h1,h3,h2{
     color:white;
     box-shadow: 5px 3px ;
 }
+
 .images-box{
     display: flex;
-
-    /* grid-template-rows: 50% 50%; */
     /* grid-template-columns: 50% 50%; */
-    /* height: 100%; */
-
+    /* height: 50%; */
+    padding-bottom: 10px;
+    /* gap: 5px; */
+    /* border-radius: 50%; */
 }
 
-.images-div{
+.previmage-div{
     display: flex;
-    width: 100%;
-    /* max-height: 500px; */
+    width: 50%;
+  height: fit-content;
 }
 
 .spot-preview-img{
-    width:50%;
-    height:auto;
-    /* object-fit:fill; */
+    /* width:100%; */
+    /* height:auto; */
     object-fit: cover;
+    overflow: hidden;
 }
+
 .non-preview-spot-images{
     display: flex;
+    width: 50%;
     flex-wrap: wrap;
     flex-direction: column;
     height:fit-content;
-    /* grid-template-rows: 50% 50%;
-    grid-template-columns: 50% 50%; */
-     /* fit-content; */
+    /* overflow: hidden; */
 }
-.first,.second{
+
+.top-row-images,.bottom-row-images{
     display: flex;
-    margin: 0;
-    width: 50%;
+    /* width: 50%; */
+    /* object-fit: cover; */
+    /* margin-bottom: 2.5px; */
+
 }
 
 .spot-grid-img{
     width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+    /* margin-left: 2.5px; */
+    /* margin-right: 2.5px; */
+    
 
 }
 
