--- a/authenticate-me/frontend/src/components/UpdateFormModal/UpdateFormModal.css
+++ b/authenticate-me/frontend/src/components/UpdateFormModal/UpdateFormModal.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: center;
 }
-form{  
+.update-form-modal{  
     max-width: 580px;
     padding:0;
     overflow-x: hidden;
@@ -27,6 +27,9 @@ input{
 }
 textarea{
     width: 98%;
+}
+select{
+    width:100%
 }
 .Navigation{
     width:1000px;
