--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -50,13 +50,14 @@ h1,h3,h2{
     /* height: 50%; */
     padding-bottom: 10px;
     /* gap: 5px; */
-    /* border-radius: 50%; */
+    border-radius: 50%;
+    
 }
 
 .previmage-div{
     display: flex;
     width: 50%;
-  height: fit-content;
+  /* height: fit-content; */
 }
 
 .spot-preview-img{
@@ -64,13 +65,17 @@ h1,h3,h2{
     /* height:auto; */
     object-fit: cover;
     overflow: hidden;
+    padding:5px;
+    border-radius: 15px;
+    
 }
 
 .non-preview-spot-images{
-    display: flex;
+    display: grid;
     width: 50%;
-    flex-wrap: wrap;
-    flex-direction: column;
+    grid-template-rows: 50% 50%;
+    /* flex-wrap: wrap;
+    flex-direction: column; */
     height:fit-content;
     /* overflow: hidden; */
 }
@@ -85,8 +90,11 @@ h1,h3,h2{
 
 .spot-grid-img{
     width: 100%;
+    height: auto;
     overflow: hidden;
     object-fit: cover;
+    padding:5px;
+    border-radius: 15px;
     /* margin-left: 2.5px; */
     /* margin-right: 2.5px; */
     
