--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -82,8 +82,9 @@ h1,h3,h2{
 
 .top-row-images,.bottom-row-images{
     display: flex;
+    height:100%;
     /* width: 50%; */
-    /* object-fit: cover; */
+    object-fit: cover;
     /* margin-bottom: 2.5px; */
 
 }
