--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -47,22 +47,25 @@ h1,h3,h2{
 .images-box{
     display: flex;
     /* grid-template-columns: 50% 50%; */
-    /* height: 50%; */
+    width:100%;
+    height: 600px;
     padding-bottom: 10px;
-    /* gap: 5px; */
-    border-radius: 50%;
+    gap: 5px;
+    /* border-radius: 50%; */
+    /* border:3px solid red; */
+
     
 }
 
 .previmage-div{
     display: flex;
     width: 50%;
-  height: fit-content;
+  height: 590px;
 }
 
 .spot-preview-img{
     width:100%;
-    height:auto;
+    height:100%;
     object-fit: cover;
     overflow: hidden;
     padding:5px;
@@ -70,32 +73,38 @@ h1,h3,h2{
     
 }
 
-.non-preview-spot-images{
-    display: grid;
+.non-preview-spot-images-div{
+    display: flex;
     width: 50%;
-    grid-template-rows: 50% 50%;
-    /* flex-wrap: wrap;
-    flex-direction: column; */
-    height:fit-content;
+    /* grid-template-rows: 50% 50%; */
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    height:100%;
     /* overflow: hidden; */
 }
 
 .top-row-images,.bottom-row-images{
     display: flex;
-    height:100%;
-    /* width: 50%; */
+    height:50%;
+    width: 100%;
     object-fit: cover;
     /* margin-bottom: 2.5px; */
+    /* border:3px solid red; */
+    
+
 
 }
 
 .spot-grid-img{
+    
     width: 100%;
-    height: auto;
+    /* height: 295px; */
     overflow: hidden;
     object-fit: cover;
     padding:5px;
     border-radius: 15px;
+    /* gap:2.5px; */
+    /* padding:10px; */
     /* margin-left: 2.5px; */
     /* margin-right: 2.5px; */
     
