--- a/authenticate-me/frontend/src/components/UpdateFormModal/UpdateFormModal.css
+++ b/authenticate-me/frontend/src/components/UpdateFormModal/UpdateFormModal.css
@@ -16,9 +16,9 @@
 .update-form-modal{  
     max-width: 580px;
     padding:0;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    max-height: calc(100vh - 250px);
+    /* overflow-x: hidden; */
+    /* overflow-y: scroll; */
+    /* max-height: calc(100vh - 250px); */
 
 }
 
