added hover text to spot tiles

--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -5,6 +5,7 @@
 h1,h3,h2{
     display: flex;
     justify-content: left;
+    margin:0;
 }
 
 .spot-details-box{
@@ -111,3 +112,8 @@ h1,h3,h2{
 
 }
 
+.spot-description-div{
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+}
