--- a/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
+++ b/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
@@ -9,20 +9,35 @@
     width:100%;
     /* width:50%; */
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     max-width: 1000px;
     padding-top: 50px;
     /* border:5px solid red; */
 
 }
 
-.spot-tiles{
+.spot-tiles {
     display:flex;
     flex-wrap:wrap;
-    justify-content:flex-start;
+    justify-content:center;
     gap: 10px;;
     /* flex-basis:66.7%; */
     /* border:5px solid red; */
+}
+.hover-text:hover .tooltip-text{
+    visibility:visible;
+}
+
+.tooltip-text{
+    visibility: hidden;
+    position: absolute;
+    z-index: 1;
+    width: 120px;
+    color:white;
+    font-size: 15px;
+    background-color: rgb(19, 19, 19);
+    border-radius: 5px;
+    padding:10px
 }
 
 .spot-link{
