--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -8,24 +8,20 @@
     display:none
 }
 
-.nav{
-    max-width: 1000px;
+nav{
+    /* width: 100%; */
+    /* max-width: 3840px; */
     /* border:3px solid red; */
     
 }
-
-/* body{
-    max-width: 1000px;
-} */
 
 .nav-bar{
     display:flex;
     justify-content:space-between;
     align-items: center;
-    padding-top: 20px;
-    /* padding-bottom: 20px; */
     border-bottom: 2px solid lightgrey;
-    width:1000px;
+    /* width:100%; */
+    padding:0 50px
 }
 
 .profile-menu{
