--- a/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
+++ b/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
@@ -32,7 +32,7 @@
     visibility: hidden;
     position: absolute;
     z-index: 1;
-    width: 120px;
+    width: fit-content;
     color:white;
     font-size: 15px;
     background-color: rgb(19, 19, 19);
