--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -30,10 +30,6 @@ h1,h3,h2{
     justify-content: left;
     margin:0;
 }
-.spot-heading{
-    /* display: flex; */
-    /* justify-content: center; */
-}
 
 
 .spot-details-info{
@@ -46,7 +42,7 @@ h1,h3,h2{
     display:flex;
     flex-direction: column;
     align-items: space-between;
-    border:2px solid black;
+    border:2px solid rgb(19, 36, 48);
     justify-content: space-between;
     width:300px;
     height:100px;
@@ -138,4 +134,19 @@ h1,h3,h2{
     display: flex;
     flex-direction: column;
     max-width: 500px;
+}
+
+.reviews-section-div{
+    border-top: 2px solid rgb(19, 36, 48);
+}
+
+#post-review-btn{
+    width: fit-content;
+    background-color: rgb(19, 36, 48);
+    color:white;
+    box-shadow: 5px,5px;
+}
+
+#review-ratings-div{
+    font-size: 175%;
 }
