--- a/authenticate-me/frontend/src/components/CreateReviewModal/CreateReviewModal.css
+++ b/authenticate-me/frontend/src/components/CreateReviewModal/CreateReviewModal.css
@@ -1,21 +1,27 @@
 .create-review-box{
     display: flex;
     flex-direction: column;
-    width: 480px;
+    width: 320px;
 }
 
+.review-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
-
-.review-description{
+.review-modal-description{
     display: flex;
     justify-content: center;
-    width: 98.5%;
+    margin:20px;
+    /* width: 90%; */
 }
 
 .review-stars{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    font-size: 200%;
 }
 
 #filled{
@@ -29,11 +35,18 @@
 .review-modal-title,.star-row, .star-label, .submit-review-btn{
     display: flex;
     justify-content: center;
+    margin:0;
+}
+.review-modal-title{
+    margin-top: 20px;
 }
 
 #submit-review{
     height:50px;
-    
-    width: 200px;
+    background-color:red;
+    color:white;
+    width: 100%;
+    margin:20px;
+    box-shadow: 3px 3px black;
 }
 
