manage spots css fixes

--- a/authenticate-me/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/authenticate-me/frontend/src/components/LoginFormModal/LoginForm.css
@@ -8,7 +8,7 @@
 .login-box{
     display: flex;
     flex-direction: column;
-    padding:0px 50px 50px;
+    padding:0px 20px 20px;
     border-radius: 50px;
     min-width: 400px;
     /* border:3px solid red; */
@@ -26,11 +26,17 @@
     /* border-radius: 50px; */
 
 }
-.login-btn{
+.login-btn-red{
     padding:20px 0px;
     background-color: red;
     color:white;
-    box-shadow: 10px 10px 2px black;
+    box-shadow: 3px 3px black;
+}
+.login-btn-grey{
+    padding:20px 0px;
+    background-color: white;
+    color:grey;
+    box-shadow: 3px 3px black;
 }
 
 .disabled-btn{
