--- a/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
+++ b/authenticate-me/frontend/src/components/AllSpots/AllSpots.css
@@ -35,7 +35,7 @@
     width: fit-content;
     color:white;
     font-size: 15px;
-    background-color: rgb(19, 19, 19);
+    background-color: rgb(19, 36, 48);
     border-radius: 5px;
     padding:10px
 }
@@ -48,7 +48,7 @@
     border:transparent;
     border-color: transparent;
     max-width: 200px;
-    color:black;   
+    color:rgb(19, 36, 48);   
     justify-content: center;
     padding:10px;
 }
