--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -22,6 +22,7 @@
 .profile-menu{
     display:flex;
     justify-content: space-evenly;
+    align-items: center;
     margin:20px 0;
     /* margin-right:20px; */
     /* border:3px solid red; */
@@ -31,6 +32,7 @@
     justify-content: space-between;
     padding:5px 10px;
     border-radius: 10px;
+    font-size: 150%;
     /* border:3px solid red; */
 }
 
@@ -43,10 +45,10 @@
 .profile-dropdown{    
     position:absolute;
     background-color: white;
-    right:15%;
+    right:5%;
     padding:10px 20px;
     /* margin-right: 200px; */
-    border:2px solid black;
+    border:2px solid rgb(19, 38, 48);
     border-radius: 5px;
     box-shadow: 10px;
 }
@@ -70,4 +72,11 @@
 .logout-btn-div{
     display: flex;
     justify-content: center;
+}
+#manage-spots-profile-link{
+    text-decoration: none;
+}
+#manage-spots-profile-link:visited{
+    text-decoration: none;
+    color: rgb(19, 38, 48);
 }
