--- a/authenticate-me/frontend/src/components/UpdateFormModal/UpdateFormModal.css
+++ b/authenticate-me/frontend/src/components/UpdateFormModal/UpdateFormModal.css
@@ -58,3 +58,25 @@ h1,h2,h3,p{
     box-shadow: 3px 3px black;
 
 }
+#delete-review-modal{
+    display: flex;
+    /* justify-content: center; */
+}
+#delete-review-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.delete-review-title{
+    display: flex;
+    justify-content: center;
+    width:100%;
+}
+
+#delete-review-modal-form{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    /* align-items: center; */
+}
+
