--- a/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/authenticate-me/frontend/src/components/SingleSpot/SingleSpot.css
@@ -87,7 +87,8 @@
     height:100%;
     object-fit: cover;
     overflow: hidden;
-    padding:5px;
+    margin:5px;
+    box-shadow: 0 0 3px 1px;
     border-radius: 15px;
     
 }
@@ -120,8 +121,9 @@
     /* height: 295px; */
     overflow: hidden;
     object-fit: cover;
-    padding:5px;
+    margin:5px;
     border-radius: 15px;
+    box-shadow: 0 0 3px 1px;
     /* gap:2.5px; */
     /* padding:10px; */
     /* margin-left: 2.5px; */
