fixed responsiveness on manage spots

--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -76,6 +76,9 @@
 }
 #manage-spots-profile-link{
     text-decoration: none;
+    color: rgb(19, 38, 48);
+
+
 }
 #manage-spots-profile-link:visited{
     text-decoration: none;
