added hover pointers

--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -34,14 +34,22 @@
     padding:5px 10px;
     border-radius: 20px;
     font-size: 150%;
+    cursor: pointer;
     /* border:3px solid red; */
+}
+.menu-btn:hover{
+    cursor: pointer;
 }
 
 .ProfileButton{
     display: flex;
     border-radius: 50%;
     gap:10px;
+    cursor: pointer;
+    
+
 }
+
 
 .profile-dropdown{    
     position:absolute;
