--- a/authenticate-me/frontend/src/index.css
+++ b/authenticate-me/frontend/src/index.css
@@ -16,6 +16,10 @@ body{
     justify-content: center;
 }
 
+button:hover{
+    cursor: pointer;
+}
+
 /* html{
     display: flex;
     justify-content: center;
