--- a/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
@@ -32,6 +32,12 @@ input{
     color:white;
     box-shadow: 5px 5px 4px black;
 }
+.signup-btn-locked{
+    padding:20px 0px;
+    background-color: white;
+    color:rgb(19, 36, 48);
+    box-shadow: 5px 5px 4px black;
+}
 
 .errors{
     color:red
