--- a/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
@@ -33,13 +33,18 @@
     box-shadow: 5px 5px 4px black;
 }
 .signup-btn-locked{
-    padding:20px 0px;
+    padding:20px 10px;
     background-color: white;
     color:rgb(19, 36, 48);
     box-shadow: 5px 5px 4px black;
 }
 .signup-btn-locked:hover{    
     cursor: not-allowed;
+}
+.create-btn-div{
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 .errors{
