--- a/authenticate-me/frontend/src/components/CreateReviewModal/CreateReviewModal.css
+++ b/authenticate-me/frontend/src/components/CreateReviewModal/CreateReviewModal.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-direction: column;
     width: 320px;
+    align-items: center;
 }
 
 .review-form{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
 }
 
 .review-modal-description{
@@ -30,6 +32,7 @@
 
 #empty, .errors{
     color: red;
+    justify-content: center;
 }
 
 .review-modal-title,.star-row, .star-label, .submit-review-btn{
