--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -103,6 +103,11 @@
     font-size: 6rem;
     font-weight: bolder;
     letter-spacing:0;
+    text-decoration: none;
     
     
+}
+.main-logo-text{
+    text-decoration: none;
+    color:rgb(19, 38, 48)
 }
